Make the search function working

--- a/src/main/resources/templates/contacts/list.html
+++ b/src/main/resources/templates/contacts/list.html
@@ -20,7 +20,7 @@
 
     <!-- Search Section -->
     <div class="p-10 bg-gray-100/80">
-        <form th:action="@{/contacts}" method="get" class="flex flex-col md:flex-row gap-4 max-w-lg mx-auto">
+        <form th:action="@{/api/contacts/list}" method="get" class="flex flex-col md:flex-row gap-4 max-w-lg mx-auto">
             <div class="relative flex-1">
                 <i class="fas fa-search absolute left-5 top-1/2 -translate-y-1/2 text-gray-400"></i>
                 <input
