--- a/src/main/resources/templates/contacts/list.html
+++ b/src/main/resources/templates/contacts/list.html
@@ -20,7 +20,7 @@
 
     <!-- Search Section -->
     <div class="p-10 bg-gray-100/80">
-        <form th:action="@{/api/contacts/list}" method="get" class="flex flex-col md:flex-row gap-4 max-w-lg mx-auto">
+        <form th:action="@{/}" method="get" class="flex flex-col md:flex-row gap-4 max-w-lg mx-auto">
             <div class="relative flex-1">
                 <i class="fas fa-search absolute left-5 top-1/2 -translate-y-1/2 text-gray-400"></i>
                 <input
@@ -309,7 +309,7 @@
 
     function deleteContact(contactId) {
         if (confirm("Are you sure you want to delete this contact?")) {
-            fetch(`/api/contacts/delete/${contactId}`, {
+            fetch(`delete/${contactId}`, {
                 method: "DELETE"
             })
                 .then(response => {
@@ -352,7 +352,7 @@
             .then(updatedContact => {
                 console.log('Contact updated successfully:', updatedContact);
                 // Redirect to home page
-                window.location.href = "/api/contacts/list";
+                window.location.href = "/";  // in here the base endpoint is used (from api/contacts/list to /)
             })
             .catch(error => {
                 console.error('Error:', error);
