Make the cancel button in the overlay woking

--- a/src/main/resources/templates/contacts/list.html
+++ b/src/main/resources/templates/contacts/list.html
@@ -344,7 +344,7 @@
             }
 
             // Redirect after closing
-            window.location.href = "/api/contacts/list";
+            window.location.href = "/";
         }, 200);
     }
 
